--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,15 +1,14 @@
 Package: org.coolstar.sileo
-Priority: required
+Priority: optional
 Section: Packaging
 Maintainer: CoolStar <coolstarorganization@gmail.com>
 Architecture: iphoneos-arm
-Version: 2.0.1
+Version: 2.0.1+e1
 Icon: https://getsileo.app/img/icon.png
 SileoDepiction: https://featuredpage.getsileo.app/depiction.json
-Depends: apt (>= 2.1.10-1), coreutils (>=8.32-4), dpkg (>= 1.19.2-4), procursus-keyring, zsh, cy+cpu.arm64, firmware(>=12.2) | org.swift.libswift (>=5.0)
+Depends: apt (>= 1.8.0), libapt (>= 1.8.2-4), libapt-pkg5.0 (>=1.8.2-4), apt-key (>= 1.8.0), dpkg (>= 1.19.2-4), zsh | bash, cy+cpu.arm64, firmware(>=12.2) | org.swift.libswift (>=5.0), coreutils
 Conflicts: cydia-gui (<<99.0)
-Pre-Depends: debianutils, dpkg (>= 1.18)
-Description: A proper APT client for iOS 11 and higher. (View this package in Sileo to see the full depiction)
+Pre-Depends: debianutils, dpkg (>= 1.19)
+Description: An APT client for iOS 11 and higher. (View this package in Sileo to see the full depiction)
 Name: Sileo
 Author: Sileo Team <getsileoapp@gmail.com>
-Tag: cydia::essential
