--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -6,7 +6,7 @@ Architecture: iphoneos-arm
 Version: 2.0.1+e1
 Icon: https://getsileo.app/img/icon.png
 SileoDepiction: https://featuredpage.getsileo.app/depiction.json
-Depends: apt (>= 1.8.0), libapt (>= 1.8.2-4), libapt-pkg5.0 (>=1.8.2-4), apt-key (>= 1.8.0), dpkg (>= 1.19.2-4), zsh | bash, cy+cpu.arm64, firmware(>=12.2) | org.swift.libswift (>=5.0), coreutils
+Depends: apt (>= 1.8.0), libapt (>= 1.8.2.2), libapt-pkg5.0 (>=1.8.2.2), apt-key (>= 1.8.0), dpkg (>= 1.19.2-4), zsh | bash, cy+cpu.arm64, firmware(>=12.2) | org.swift.libswift (>=5.0), coreutils
 Conflicts: cydia-gui (<<99.0)
 Pre-Depends: debianutils, dpkg (>= 1.19)
 Description: An APT client for iOS 11 and higher. (View this package in Sileo to see the full depiction)
